--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
         <input type="text" name="cnpj" class="form-control input-lg" placeholder="00.000.000/0001-00" required>
     </div>
 
-    <div class="form-group">
-        <label for="razao">Razão Social:</label>
-        <input type="text" name="razao" class="form-control input-lg" required>
+      <div class="form-group">
+            <label for="razao_social">Razão Social:</label>
+            <input type="text" name="razao_social" class="form-control input-lg" required>
     </div>
 
     <div class="form-group">
